crates/conduit-derive/tests/compile_fail/derive_enum.rs
use conduit_derive::Encode;
#[derive(Encode)]
enum Foo { A, B }
fn main() {}
